--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -71,8 +71,11 @@
       left: 16px;
       font-size: 18px;
     }
+    .section2{
+       height: 100vh;
+    }
     .titremenu{
-       padding-top:100px;
+       padding-top:130px;
     }
     .our{
        text-transform: uppercase;
@@ -80,6 +83,15 @@
     .texte1{
        width: 35%;
        
+    }
+    .titre2{
+       padding-top: 80px;
+    }
+    .imgmenu{
+       height: 100px;
+       border-radius: 50%;
+       width: 100px;
+       margin-bottom: 10px;
     }
     
  
