--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10644,8 +10644,12 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 18px;
 }
 
+.section2 {
+  height: 100vh;
+}
+
 .titremenu {
-  padding-top: 100px;
+  padding-top: 130px;
 }
 
 .our {
@@ -10654,5 +10658,16 @@ a.text-dark:hover, a.text-dark:focus {
 
 .texte1 {
   width: 35%;
+}
+
+.titre2 {
+  padding-top: 80px;
+}
+
+.imgmenu {
+  height: 100px;
+  border-radius: 50%;
+  width: 100px;
+  margin-bottom: 10px;
 }
 /*# sourceMappingURL=style.css.map */
