--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -20,15 +20,20 @@ body{
     border-top: 2px white solid;
     border-bottom: 2px white solid;
     color: white;
-    padding: 4px 15px;
+    padding: 0 10px;
     
  }
  .navbar-nav>li>a{
     color:white;
  }
  .navbar-nav>li>a:hover{
-    background-color: red;
+    background-color: red
+    
    
+ }
+ .bold{
+    font-size: larger;
+    
  }
  .logo{
     margin-left: 6%;
@@ -48,8 +53,8 @@ body{
      background:rgba(0,0,0,0.6);
    }
    .carouseltext{
-      font-size: 35px;
-      width: 50%;
+      font-size: 37px;
+      width: 54%;
       font-family: 'Courgette', cursive;
       
    }
@@ -81,10 +86,10 @@ body{
       font-size: 18px;
     }
     .section2{
-       height: 200vh;
        margin-top: 30px;
        background-color: white;
        width: 80%;
+       padding-bottom: 150px;
     }
     .titremenu{
        padding-top:70px;
@@ -103,7 +108,7 @@ body{
       
     }
     .imgmenu{
-       height: 90px;
+       height: 50%;
        border-radius: 50%;
        width: 90px;
        margin-bottom: 10px;
@@ -111,7 +116,7 @@ body{
        margin-left: 25px;
     }
     .imgmenu2{
-      height: 90px;
+      height: 50%;
       border-radius: 50%;
       width: 90px;
       margin-bottom: 10px;
@@ -262,6 +267,10 @@ body{
        height: 50px;
        border-radius: 10%;
     }
+    .bouton{
+       height: max-content;
+       width: max-content;
+    }
    .formulaire{
       margin-top: 50px;
    }
@@ -285,18 +294,85 @@ body{
       .blogdescri{
          position: absolute;
          z-index: 999;
-         margin-top: 34%;
-         padding: 15px 15px;
+      
+         margin-top:34%;
+         padding: 15px 50px;
          border-radius: 10%;
+         font-size:small;
+         
       }
       .blogdescri2{
          position: absolute;
          z-index: 999;
          margin-top: 34%;
-         padding: 15px 15px;
+         margin-left: 7%;
+         padding: 15px 50px;
          border-radius: 10%;
+         font-size:small;
          
       }
-  
+      #blog{
+         font-weight: bold;
+         font-size: larger
+      }
+.section5{
+   height: max-content;
+   background-image: url(../images/testimonials_background.jpg);
+   text-align: center;
+   color:white;
+   padding-top: 30px;
+   padding-bottom: 50px;
+
+}
+.contactme{
+width: 40%;
+
+padding: 10px 10px;
+text-align: center;
+border-radius: 10%;
+
+}
+.footer{
+   background-color: black;
+   height: 100vh;
+}
+
+/* Place the navbar at the bottom of the page, and make it stick */
+
+ .nav-link{
+     margin:0 auto;
+
+ }
+ 
+ .lien:hover{
+       color:rosybrown !important;
+   }
+   .footerbas{
+      padding: 30px 0;
+      margin-top: 30px;
+   }
+   .contact{
+      margin-bottom: 100px;
+      margin-top:100px;
+   }
+   .imgtest{
+      border-radius: 50%;
+      border:grey 4px solid;
+   }
+   .blocktest{
+      border:grey 1px solid;
+      border-radius: 5%;
+      font-size: small;
+     
+   }
+   .footerfin{
+      background-image: url(../images/footer_background.jpg);
+      
+      padding-top: 23px;
+   }
+   .tags{
+      width: max-content;
+      border: white 2px solid;
+   }
       
   
