--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,5 @@
-@import"./variables";
-@import"../../node_modules/bootstrap/scss/bootstrap.scss";
-@import"./header"
+@import  "./variables";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./header";
+//@import "./bodytop";
+//@import "./-bodymiddle.scss"
