--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10565,8 +10565,65 @@ body {
   background-image: url(../images/main_bg.jpg);
 }
 
-.navlink:hover {
-  color: rosybrown !important;
+header {
+  position: relative;
+}
+
+header .navss {
+  position: absolute;
+  z-index: 999;
+  width: 100%;
+}
+
+header .navss li {
+  width: 60%;
+  padding: 3px 0px;
+}
+
+header .ul1 {
+  border-bottom: solid 1px white;
+  border-top: solid 1px white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  margin-top: 4%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+header .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header .ul2 {
+  border-bottom: solid 1px white;
+  border-top: solid 1px white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  margin-top: 4%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.li1 {
+  background-color: red;
+  background-size: cover;
 }
 
 .carousel-item {
@@ -10583,28 +10640,24 @@ body {
   width: 10px;
 }
 
-.navbar-nav > li {
-  border-top: 2px white solid;
-  border-bottom: 2px white solid;
-  color: white;
-  padding: 0 10px;
+.carousel-control-prev {
+  opacity: 0;
+}
+
+.carousel-control-next {
+  opacity: 0;
 }
 
 .navbar-nav > li > a {
   color: white;
 }
 
-.navbar-nav > li > a:hover {
+.navbar-nav > li:hover {
   background-color: red;
 }
 
 .bold {
   font-size: larger;
-}
-
-.logo {
-  margin-left: 6%;
-  margin-right: 5%;
 }
 
 .item {
@@ -10619,23 +10672,72 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.9);
 }
 
-.carouseltext {
-  font-size: 37px;
-  width: 54%;
+.spancarou {
+  font-size: 130%;
+}
+
+.spancaroured {
+  font-size: 130%;
+  color: red;
+}
+
+.text-head {
+  position: absolute;
+  z-index: 10;
+  top: 25%;
+  width: 60%;
+  left: 20%;
+}
+
+.textcarou {
+  color: white;
   font-family: 'Courgette', cursive;
+  font-size: 320%;
+  text-align: center;
+  opacity: 0.8;
 }
 
-.navss {
+div > div > .btn {
+  border-radius: 25px;
+  font-size: 80%;
+  padding: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.btn1 {
+  background: #e4e4e4;
+  border: none;
+}
+
+.btn1:hover {
+  background-color: red;
+  color: white;
+}
+
+.btn2 {
+  background-color: red !important;
+}
+
+.btn2:hover {
+  background: #e4e4e4;
+  color: black;
+}
+
+.bascarou {
   position: absolute;
   z-index: 999;
+  height: 10px;
+  background-image: url("../images/bottom_decoration_img.png");
+  background-repeat: repeat;
+  bottom: 0;
   width: 100%;
-}
-
-.head {
-  position: relative;
 }
 
 #content {
@@ -10661,13 +10763,15 @@ body {
 
 .section2 {
   margin-top: 30px;
+  border: grey 1px solid;
   background-color: white;
-  width: 100%;
+  width: 80%;
   padding-bottom: 150px;
 }
 
 .titremenu {
   padding-top: 70px;
+  margin-bottom: 0px;
   font-family: 'Courgette', cursive;
 }
 
@@ -10678,24 +10782,25 @@ body {
 .titre2 {
   padding-top: 80px;
   font-family: 'Courgette', cursive;
+  margin-bottom: 0;
 }
 
 .imgmenu {
   height: 50%;
   border-radius: 50%;
-  width: 90px;
+  width: 80%;
   margin-bottom: 10px;
   margin-right: 10px;
-  margin-left: 25px;
+  border: grey 2px solid;
 }
 
 .imgmenu2 {
-  height: 50%;
+  height: 45%;
   border-radius: 50%;
-  width: 90px;
+  width: 90%;
   margin-bottom: 10px;
   margin-right: 10px;
-  margin-left: 25px;
+  border: grey 2px solid;
 }
 
 .break {
@@ -10713,6 +10818,14 @@ body {
 
 .textmeet {
   font-family: 'Courgette', cursive;
+  margin-bottom: 0px;
+  z-index: 999;
+  position: relative;
+}
+
+.imgtest {
+  position: relative;
+  z-index: 999;
 }
 
 .lignetab {
@@ -10727,7 +10840,22 @@ body {
   height: 130px;
 }
 
-.list2 > i:hover {
+.premier {
+  color: red;
+}
+
+.prix {
+  background-color: rgba(240, 240, 240, 0.6);
+  padding: 0 5px;
+  color: red;
+  text-align: center;
+}
+
+.courg {
+  font-family: 'Courgette', cursive;
+}
+
+.list2:hover i {
   color: red;
 }
 
@@ -10752,8 +10880,12 @@ div > ul > .list-group-item:first-of-type {
 }
 
 .section3 {
-  background-color: black;
+  background-image: url(../images/team_background.jpg);
   padding-bottom: 70px;
+  background-repeat: no repeat;
+  background-position-y: 45%;
+  background-position-x: 50%;
+  background-size: 800%;
 }
 
 .chef {
@@ -10766,10 +10898,14 @@ div > ul > .list-group-item:first-of-type {
   height: max-content;
   background-color: #fff;
   margin-top: 50px;
+  margin-bottom: 50px;
+  width: 80%;
+  border: grey 1px solid;
 }
 
 .titlereservation {
   padding-top: 75px;
+  margin-bottom: 0px;
 }
 
 .imagetable {
@@ -10850,8 +10986,15 @@ b {
 
 .btns {
   width: auto;
-  height: 50px;
+  background-color: red;
   border-radius: 20px;
+}
+
+.btnss {
+  background-color: red;
+  width: auto;
+  border-radius: 20px;
+  margin-top: 20px;
 }
 
 .bouton {
@@ -10871,43 +11014,54 @@ b {
   height: max-content;
 }
 
+input {
+  margin: 0;
+}
+
 .imgblog {
   padding-top: 50px;
 }
 
 .imgblog1 {
   height: auto;
-  width: 75%;
+  width: 80%;
   border-radius: 20px;
   border: #d2d2d2 3px solid;
   position: relative;
 }
 
 .imgblog2 {
-  width: 75%;
+  width: 80%;
   height: auto;
   border: #d2d2d2 3px solid;
   border-radius: 20px;
+  position: relative;
 }
 
 .blogdescri {
   position: absolute;
+  background-color: red;
   z-index: 999;
-  right: 10%;
-  top: 63%;
-  padding: 15px 50px;
-  border-radius: 20px;
-  font-size: small;
+  right: 8%;
+  top: 90%;
+  padding: 7px 35px 7px 20px;
+  border-radius: 10px;
+  font-size: 15px;
 }
 
 .blogdescri2 {
   position: absolute;
+  background-color: red;
   z-index: 999;
-  top: 63%;
-  left: 11%;
-  padding: 15px 50px;
-  border-radius: 20px;
-  font-size: small;
+  top: 90%;
+  left: 7.5%;
+  padding: 7px 35px 7px 20px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+.blogsla {
+  font-size: 25px;
 }
 
 .form-control {
@@ -10916,20 +11070,23 @@ b {
   margin-left: 5%;
 }
 
+.chef {
+  border-bottom: grey 1px solid;
+}
+
 .police {
   font-size: 50px;
+  color: red;
 }
 
 .textblog {
-  width: 100%;
-  margin-left: 35%;
-  width: 60%;
+  margin-left: 12%;
+  margin-top: 2%;
 }
 
 .textblog1 {
-  width: 100%;
-  margin-left: 12%;
-  width: 57%;
+  margin-left: 1%;
+  margin-top: 2%;
 }
 
 .titreblog {
@@ -10942,7 +11099,7 @@ b {
 
 #blog {
   font-weight: bold;
-  font-size: larger;
+  font-size: 25px;
 }
 
 .section5 {
@@ -10950,10 +11107,39 @@ b {
   height: -moz-max-content;
   height: max-content;
   background-image: url(../images/testimonials_background.jpg);
+  background-size: 900%;
+  background-position-x: 50%;
+  background-position-y: 82%;
+  background-repeat: no-repeat;
   text-align: center;
   color: white;
   padding-top: 30px;
   padding-bottom: 50px;
+}
+
+.section5 {
+  Position: relative;
+}
+
+.section5::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.hautfooter {
+  position: absolute;
+  z-index: 999;
+  height: 10px;
+  background-image: url("../images/footer_bottom_decoration_img.png");
+  background-repeat: repeat;
+  top: 0;
+  width: 100%;
 }
 
 .contactme {
@@ -10961,12 +11147,11 @@ b {
   margin-top: 4%;
   padding: 10px 10px;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .footer {
   background-color: black;
-  height: 100vh;
 }
 
 /* Place the navbar at the bottom of the page, and make it stick */
@@ -10974,13 +11159,9 @@ b {
   margin: 0 auto;
 }
 
-.lien:hover {
-  color: rosybrown !important;
-}
-
 .footerbas {
   padding: 30px 0;
-  margin-top: 30px;
+  margin-top: 80px;
 }
 
 .contact {
@@ -10988,26 +11169,43 @@ b {
   margin-top: 100px;
 }
 
+.testi {
+  margin-top: 8%;
+}
+
 .imgtest {
-  border-radius: 20px;
+  border-radius: 100px;
+  z-index: 999;
+  position: relative;
   border: grey 4px solid;
+  width: 100%;
+  height: 100%;
 }
 
 .blocktest {
   border: grey 1px solid;
+  position: relative;
+  z-index: 999;
   border-radius: 20px;
   font-size: small;
+  padding: 20px 40px 20px 40px;
 }
 
 .footerfin {
   background-image: url(../images/footer_background.jpg);
-  padding-top: 23px;
+  position: relative;
+  padding-top: 20px;
 }
 
 .tags {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  border: white 2px solid;
+  border: white 1px solid;
+  padding: 10px 10px;
+}
+
+.tags:hover {
+  background-color: black;
 }
 /*# sourceMappingURL=style.css.map */
