--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,405 +1,569 @@
 body{
-    background-image: url(../images/main_bg.jpg);
- }
- .navlink:hover{
-    color:rosybrown !important; 
- }
- .carousel-item{
-    height:100%;
- }
- 
- .carousel-caption{
-    margin-bottom: 100px;
- }
- .carousel-indicators > li {
-    border-radius: 50%;
-    height: 10px;
-    width: 10px;
-  }
-  .navbar-nav>li{
-     border-top: 2px white solid;
-     border-bottom: 2px white solid;
-     color: white;
-     padding: 0 10px;
-     
-  }
-  .navbar-nav>li>a{
-     color:white;
-  }
-  .navbar-nav>li>a:hover{
-     background-color: red
-     
-    
-  }
-  .bold{
-     font-size: larger;
-     
-  }
-  .logo{
-     margin-left: 6%;
-     margin-right: 5%;
-  }
-  .item{
-    Position:relative;
-    }
-    .item::after {
-      content:"";
-      display:block;
-      position:absolute;
-      top:0;
-      bottom:0;
-      left:0;
-      right:0;
-      background:rgba(0,0,0,0.6);
-    }
-    .carouseltext{
-       font-size: 37px;
-       width: 54%;
-       font-family: 'Courgette', cursive;
-       
-    }
-    .navss{
-       position: absolute;
-       z-index: 999;
-       width: 100%;
-    }
-    .head{
-       position: relative;
-    }
-    #content {
-       position:relative;
-     }
-    
-     
-     .ribbon {
-       position:absolute;
-       top:0;
-       right:0;
-     }
-     .container {
-       position: relative;
-     }
-     .topleft {
-       position: absolute;
-       top: 0;
-       left: 0;
-       font-size: 18px;
-     }
-     .section2{
-        margin-top: 30px;
-        background-color: white;
-        width: 100%;
-        padding-bottom: 150px;
-     }
-     .titremenu{
-        padding-top:70px;
-        font-family: 'Courgette', cursive;
-     }
-    
-     .texte1{
-        width: 35%;
-        
-     }
-     .titre2{
-        padding-top: 80px;
-        font-family: 'Courgette', cursive;
-       
-     }
-     .imgmenu{
-        height: 50%;
-        border-radius: 50%;
-        width: 90px;
-        margin-bottom: 10px;
-        margin-right: 10px;
-        margin-left: 25px;
-     }
-     .imgmenu2{
-       height: 50%;
-       border-radius: 50%;
-       width: 90px;
-       margin-bottom: 10px;
-       margin-right: 10px;
-       margin-left: 25px;
-    }
- 
-     .break{
-        font-size: 30px;
-    }
-    .textmenu{
-       font-weight: bold;
-    }
-    .text{
-       width: 210px;
-       font-size: 14px;
-       
-    }
-    .textmeet{
-       font-family: 'Courgette', cursive;
-    }
-     .lignetab{
-        border-bottom: 1px grey dotted
-        
-     }
-     .list1{
-        border-right: 1px solid grey;
-     }
-     .lastlist{
-        height: 130px;
-     }
-     .list2>i:hover{
-       color: red;
-    }
-    div>ul>.list-group-item:first-of-type{
-       border-right: red 2px solid;
-    }
-       .list-group-item:hover{
-       border-right: red 2px solid;
-    }
-     
-     .botright{
-        bottom:0;
-        right: 0px;
-        position: absolute;
-     }
-     .botleft{
-        
-        bottom: 0;
-        left:0;
-        position: absolute;
-     }
-     .section3{
-       background-color:black;
-       padding-bottom: 70px;
-   }
-  
-     .chef{
-        border-bottom: 1 px grey;
-     }
-     .section4{
-        height: max-content;
-        background-color: #fff;
-        margin-top: 50px;
-     }
-     .titlereservation{
-        padding-top: 75px;
-     }
-     .imagetable{
-        margin-top: 80px;
-        border-radius: 20px;
- 
-     }
-    //  Formulaire
-    .bg-img {
-       /* The image used */
-       background-image: url("../images/book_table_bg.jpg");
-     
-       /* Control the height of the image */
-     
-       height: 500px;
-       width: 80%;
-       
-       
-       /* Center and scale the image nicely */
-       background-position: center;
-       background-repeat: no-repeat;
-       background-size: cover;
-       position: relative;
-       border-radius: 20px;
-     }
-     
-     /* Add styles to the form container */
-     .containers {
-       position: absolute;
-       right: 0;
-       margin: 20px;
-       max-width: auto;
-       padding: 16px;
-       background-color: transparent;
-       
-     }
-     
-     /* Full-width input fields */
-       input[type=text], input[type=password] {
-       width: 90%;
-       border-radius: 20px;
-       padding: 15px;
-       height: 15%;
-       margin: 5px 0 22px 0;
-       border: none;
-       background: #f1f1f1;
-     }
-     
-     input[type=text]:focus, input[type=password]:focus {
-       background-color: #ddd;
-       outline: none;
-     }
-     
-     /* Set a style for the submit button */
-     .btn {
-       background-color: #4CAF50;
-       color: white;
-       padding: 16px 20px;
-       border: none;
-       cursor: pointer;
-       width: 100%;
-       opacity: 0.9;
-     }
-     
-     .btn:hover {
-       opacity: 1;
-     }
-     .imageform{
-        margin-top: 50px;
-     }
-     .titlereservation{
-       font-family: 'Courgette', cursive;
-     }
-     input{ 
-        width: 50%;
-     }
-     b{
-        color: white;
-     }
-     .btns{
-        width: auto;
-        height: 50px;
-        border-radius: 20px;
-     }
-     .bouton{
-        height: max-content;
-        width: max-content;
-        border-radius:20px;
-     }
-    .formulaire{
-       margin-top: 50px;
-       height: max-content;
-    }
-    .imgblog{
-       
-       padding-top: 50px;
-    }
-       .imgblog1 {
-          height: auto;
-          width: 75%;
-          border-radius: 20px;
-          border:rgb(210,210,210) 3px solid;
-          position: relative;
-       }
-       .imgblog2{
-          width: 75%;
-          height: auto;
-          border:rgb(210,210,210) 3px solid;
-          border-radius: 20px;
-       }
-       .blogdescri{
-          position: absolute;
-          z-index: 999;
-         right: 10%;
-          top:63%;
-          padding: 15px 50px;
-          border-radius: 20px;
-          font-size:small;
-          
-       }
-       .blogdescri2{
-          position: absolute;
-          z-index: 999;
-          top: 63%;
-          left: 11%;
-          padding: 15px 50px;
-          border-radius: 20px;
-          font-size:small;
-          
-       }
-       .form-control{
-          border-radius: 20px;
-          width: 90%;
-          margin-left: 5%;
-
-       }
-       .police{
-          font-size: 50px;
-       }
-       .textblog{
-          width: 100%;
-          margin-left: 35%;
-          width: 60%;
-       }
-       .textblog1{
-         width: 100%;
-         margin-left: 12%;
-         width: 57%;
-         
+background-image: url(../images/main_bg.jpg);
+}
+header{
+position: relative;
+      .navss{
+            position: absolute;
+            z-index: 999;
+            width: 100%;
+         li{
+            width: 60%;
+            padding: 3px 0px;
+            }
       }
-       .titreblog{
-          font-size: 19px;
-       }
-       .description{
-          font-size: 12px;
-       }
-       #blog{
-          font-weight: bold;
-          font-size: larger
-       }
- .section5{
-    height: max-content;
-    background-image: url(../images/testimonials_background.jpg);
-    text-align: center;
-    color:white;
-    padding-top: 30px;
-    padding-bottom: 50px;
- 
- }
+      .ul1{
+         border-bottom: solid 1px white;
+         border-top: solid 1px white; 
+         display: flex;
+         justify-content: space-around;
+         max-height: max-content;
+         margin-top: 4%;
+         padding-left: 0;
+         padding-right: 0 ;
+         }
+         .logo{
+            display: flex;
+            justify-content: center;
+            }
+         .ul2{
+            border-bottom: solid 1px white;
+            border-top: solid 1px white; 
+            display: flex;
+            justify-content: space-around;
+            max-height: max-content;
+            margin-top: 4%;
+            padding-left: 0;
+            padding-right: 0 ;
+         }
+}
+.li1{
+   background-color: red;
+   background-size: cover;
+}
+.carousel-item{
+height:100%;
+}
+.carousel-caption{
+margin-bottom: 100px;
+}
+.carousel-indicators > li {
+border-radius: 50%;
+height: 10px;
+width: 10px;
+}
+.carousel-control-prev{
+opacity: 0;
+}
+.carousel-control-next{
+   opacity: 0;
+   }
+.navbar-nav>li>a{
+color:white;
+}
+.navbar-nav>li:hover{
+background-color: red;
 
- .contactme{
- width: 40%;
- margin-top: 4%;
- 
- padding: 10px 10px;
- text-align: center;
- border-radius: 20px;
- 
- }
- .footer{
-    background-color: black;
-    height: 100vh;
- }
- 
- /* Place the navbar at the bottom of the page, and make it stick */
- 
-  .nav-link{
-      margin:0 auto;
- 
-  }
-  
-  .lien:hover{
-        color:rosybrown !important;
-    }
-    .footerbas{
-       padding: 30px 0;
-       margin-top: 30px;
-    }
-    .contact{
-       margin-bottom: 100px;
-       margin-top:100px;
-    }
-    .imgtest{
-       border-radius: 20px;
-       border:grey 4px solid;
-    }
-    .blocktest{
-       border:grey 1px solid;
-       border-radius: 20px;
-       font-size: small;
-      
-    }
-    .footerfin{
-       background-image: url(../images/footer_background.jpg);
-       
-       padding-top: 23px;
-    }
-    .tags{
-       width: max-content;
-       border: white 2px solid;
-    }
-       
+}
+.bold{
+font-size: larger;
+}
+.item{
+Position:relative;
+}
+.item::after {
+content:"";
+display:block;
+position:absolute;
+top:0;
+bottom:0;
+left:0;
+right:0;
+background:rgba(0,0,0,0.9);
+}
+.spancarou{
+font-size:130%;
+}
+.spancaroured{
+font-size:130%;
+color:red;
+}
+.text-head{
+position: absolute;
+z-index: 10;
+top: 25%;
+width: 60%;
+left: 20%;      
+}  
+.textcarou{
+color:white;
+
+font-family: 'Courgette', cursive;
+font-size: 320%;
+text-align: center;
+opacity: 0.8;
+
+}
+div>div>.btn{ 
+border-radius: 25px;
+font-size: 80%;
+padding: 15px;
+padding-left: 20px;
+padding-right: 20px;
+width: max-content;
+
+}
+.btn1{
+background: rgb(228, 228, 228);
+border: none;
+}
+.btn1:hover{
+background-color: red;
+color: white;
+}
+.btn2{
+background-color: red !important;
+}
+.btn2:hover{
+background: rgb(228, 228, 228);
+color: black;
+}
+.bascarou{
+position: absolute;
+z-index: 999;
+height: 10px;
+background-image: url("../images/bottom_decoration_img.png");
+background-repeat: repeat;
+bottom: 0;
+width: 100%;
+}
+
+
+
+#content {
+position:relative;
+}
+
+
+.ribbon {
+position:absolute;
+top:0;
+right:0;
+}
+.container {
+position: relative;
+
+}
+.topleft {
+position: absolute;
+top: 0;
+left: 0;
+font-size: 18px;
+}
+.section2{
+margin-top: 30px;
+border: grey 1px solid;
+background-color: white;
+width: 80%;
+padding-bottom: 150px;
+}
+.titremenu{
+padding-top:70px;
+margin-bottom: 0px;
+font-family: 'Courgette', cursive;
+}
+
+.texte1{
+width: 35%;
+
+}
+.titre2{
+padding-top: 80px;
+font-family: 'Courgette', cursive;
+margin-bottom: 0;
+
+}
+.imgmenu{
+height: 50%;
+border-radius: 50%;
+width: 80%;
+margin-bottom: 10px;
+margin-right: 10px;
+border:grey 2px solid;
+}
+.imgmenu2{
+   height: 45%;
+   border-radius: 50%;
+   width: 90%;
+   margin-bottom: 10px;
+   margin-right: 10px;
+   border:grey 2px solid;
+}
+
+.break{
+font-size: 30px;
+}
+.textmenu{
+font-weight: bold;
+}
+.text{
+width: 210px;
+font-size: 14px;
+
+}
+
+.textmeet{
+font-family: 'Courgette', cursive;
+margin-bottom: 0px;
+z-index: 999;
+position: relative;
+}
+.imgtest{
+   position: relative;
+   z-index: 999;
+}
+.lignetab{
+border-bottom: 1px grey dotted
+
+}
+.list1{
+border-right: 1px solid grey;
+}
+.lastlist{
+height: 130px;
+}
+.premier{
+   color:red;
+}
+.prix{
+   background-color: rgba(240, 240, 240, 0.6);
+   padding: 0 5px;
+   color:red;
+   text-align: center;
+   
+}
+.courg{
+   font-family: 'Courgette', cursive;
+}
+.list2:hover i{
+color: red;
+}
+div>ul>.list-group-item:first-of-type{
+border-right: red 2px solid;
+}
+.list-group-item:hover{
+border-right: red 2px solid;
+}
+
+.botright{
+bottom:0;
+right: 0px;
+position: absolute;
+}
+.botleft{
+
+bottom: 0;
+left:0;
+position: absolute;
+}
+.section3{
+background-image:url(../images/team_background.jpg);
+padding-bottom: 70px;
+background-repeat: no repeat;
+background-position-y: 45%;
+background-position-x: 50%;
+background-size: 800%;
+}
+
+.chef{
+border-bottom: 1 px grey;
+}
+.section4{
+height: max-content;
+background-color: #fff;
+margin-top: 50px;
+margin-bottom:50px;
+width: 80%;
+border:grey 1px solid;
+}
+.titlereservation{
+padding-top: 75px;
+margin-bottom:0px;
+}
+.imagetable{
+margin-top: 80px;
+border-radius: 20px;
+
+}
+//  Formulaire
+.bg-img {
+/* The image used */
+background-image: url("../images/book_table_bg.jpg");
+
+/* Control the height of the image */
+
+height: 500px;
+width: 80%;
+
+
+/* Center and scale the image nicely */
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+border-radius: 20px;
+}
+
+/* Add styles to the form container */
+.containers {
+position: absolute;
+right: 0;
+margin: 20px;
+max-width: auto;
+padding: 16px;
+background-color: transparent;
+
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+width: 90%;
+border-radius: 20px;
+padding: 15px;
+height: 15%;
+margin: 5px 0 22px 0;
+border: none;
+background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+background-color: #ddd;
+outline: none;
+}
+
+/* Set a style for the submit button */
+.btn {
+background-color: #4CAF50;
+color: white;
+padding: 16px 20px;
+border: none;
+cursor: pointer;
+width: 100%;
+opacity: 0.9;
+}
+
+.btn:hover {
+opacity: 1;
+}
+.imageform{
+margin-top: 50px;
+}
+.titlereservation{
+font-family: 'Courgette', cursive;
+}
+input{ 
+width: 50%;
+}
+b{
+color: white;
+}
+.btns{
+width: auto;
+ background-color: red;
+border-radius: 20px;
+
+}
+.btnss{
+      background-color: red;
+      width: auto;
+      border-radius: 20px;
+      margin-top: 20px;
+}
+.bouton{
+height: max-content;
+width: max-content;
+border-radius:20px;
+}
+.formulaire{
+margin-top: 50px;
+height: max-content;
+}
+input{
+   margin: 0;
+}
+.imgblog{
+
+padding-top: 50px;
+}
+.imgblog1 {
+height: auto;
+width: 80%;
+border-radius: 20px;
+border:rgb(210,210,210) 3px solid;
+position: relative;
+}
+.imgblog2{
+width: 80%;
+height: auto;
+border:rgb(210,210,210) 3px solid;
+border-radius: 20px;
+position: relative;
+}
+.blogdescri{
+position: absolute;
+background-color: red;
+z-index: 999;
+right: 8%;
+top:90%;
+padding: 7px 35px 7px 20px;
+border-radius: 10px;
+font-size:15px;
+
+}
+.blogdescri2{
+position: absolute;
+background-color: red;
+z-index: 999;
+top: 90%;
+left: 7.5%;
+padding: 7px 35px 7px 20px;
+border-radius: 10px;
+font-size:15px;
+
+}
+.blogsla{
+   font-size: 25px;
+}
+.form-control{
+border-radius: 20px;
+width: 90%;
+margin-left: 5%;
+
+}
+
+.chef{
+   border-bottom: grey 1px solid;
+}
+.police{
+font-size: 50px;
+color:red;
+
+}
+.textblog{
+margin-left: 12%;
+margin-top: 2%;
+}
+.textblog1{   
+   margin-left: 1%;
+   margin-top: 2%;
+   }
+.titreblog{
+font-size: 19px;
+}
+.description{
+font-size: 12px;
+}
+#blog{
+font-weight: bold;
+font-size: 25px;
+}
+.section5{
+height: max-content;
+background-image: url(../images/testimonials_background.jpg);
+
+background-size: 900%;
+background-position-x:50%;
+
+background-position-y: 82%; 
+background-repeat: no-repeat;
+text-align: center;
+color:white;
+padding-top: 30px;
+padding-bottom: 50px;
+
+}.section5{
+   Position:relative;
+   }
+   .section5::after {
+   content:"";
+   display:block;
+   position:absolute;
+   top:0;
+   bottom:0;
+   left:0;
+   right:0;
+   background:rgba(0,0,0,0.6);
+   }
+.hautfooter{
+position: absolute;
+z-index: 999;
+height: 10px;
+background-image: url("../images/footer_bottom_decoration_img.png");
+background-repeat: repeat;
+top: 0;
+width: 100%;
+}
+
+.contactme{
+width: 40%;
+margin-top: 4%;
+
+padding: 10px 10px;
+text-align: center;
+border-radius: 10px;
+
+}
+.footer{
+background-color: black;
+}
+
+/* Place the navbar at the bottom of the page, and make it stick */
+
+.nav-link{
+margin:0 auto;
+
+}
+
+.footerbas{
+padding: 30px 0;
+margin-top: 80px;
+}
+.contact{
+margin-bottom: 100px;
+margin-top:100px;
+}
+.testi{
+   margin-top: 8%;
+}
+.imgtest{
+border-radius: 100px;
+z-index: 999;
+position: relative;
+border:grey 4px solid;
+width: 100%;
+height: 100%;
+}
+.blocktest{
+border:grey 1px solid;
+position: relative;
+z-index: 999;
+border-radius: 20px;
+font-size: small;
+padding: 20px 40px 20px 40px;
+
+}
+.footerfin{
+background-image: url(../images/footer_background.jpg);
+position: relative;
+padding-top: 20px;
+
+}
+.tags{
+width: max-content;
+border: white 1px solid;
+padding: 10px 10px;
+}
+.tags:hover{
+background-color: black;
+
+}
