--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10571,7 +10571,7 @@ header {
 
 header .navss {
   position: absolute;
-  z-index: 999;
+  z-index: 200;
   width: 100%;
 }
 
@@ -10590,7 +10590,12 @@ header .ul1 {
 }
 
 header .ul1 li {
-  padding: 5px 15px;
+  padding: 10px 15px;
+}
+
+header .ul1 li a {
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 header .logo {
@@ -10617,69 +10622,24 @@ header .ul2 {
 }
 
 header .ul2 li {
-  padding: 5px 15px;
+  padding: 10px 15px;
 }
 
-.active {
+header .ul2 li a {
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+header .active {
   background-color: red;
 }
 
-.carousel-item {
-  height: 100%;
-}
-
-.carousel-caption {
-  margin-bottom: 100px;
-}
-
-.carousel-indicators > li {
-  border-radius: 50%;
-  height: 10px;
-  width: 10px;
-}
-
-.carousel-control-prev {
-  opacity: 0;
-}
-
-.carousel-control-next {
-  opacity: 0;
-}
-
-.navbar-nav > li > a {
+header .navbar-nav > li > a {
   color: white;
 }
 
-.navbar-nav > li:hover {
+header .navbar-nav > li:hover {
   background-color: red;
-}
-
-.bold {
-  font-size: larger;
-}
-
-.item {
-  Position: relative;
-}
-
-.item::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.9);
-}
-
-.spancarou {
-  font-size: 130%;
-}
-
-.spancaroured {
-  font-size: 130%;
-  color: red;
 }
 
 .text-head {
@@ -10690,12 +10650,85 @@ header .ul2 li {
   left: 20%;
 }
 
-.textcarou {
+.text-head .textcarou {
   color: white;
   font-family: 'Courgette', cursive;
   font-size: 320%;
   text-align: center;
   opacity: 0.8;
+}
+
+.text-head .textcarou .spancarou {
+  font-size: 130%;
+}
+
+.text-head .textcarou .spancaroured {
+  font-size: 130%;
+  color: red;
+}
+
+.text-head .btn1 {
+  background: #e4e4e4;
+  border: none;
+}
+
+.text-head .btn1:hover {
+  background-color: red;
+  color: white;
+}
+
+.text-head .btn2 {
+  background-color: red !important;
+}
+
+.text-head .btn2:hover {
+  background: #e4e4e4;
+  color: black;
+}
+
+header .carousel-item {
+  height: 100%;
+}
+
+header .carousel-caption {
+  margin-bottom: 100px;
+}
+
+header .carousel-indicators > li {
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+}
+
+header .carousel-control-prev {
+  opacity: 0;
+  position: absolute;
+  z-index: 999;
+}
+
+header .carousel-control-next {
+  opacity: 0;
+  position: absolute;
+  z-index: 100;
+}
+
+header .bold {
+  font-size: larger;
+}
+
+header .carousel-item {
+  Position: relative;
+}
+
+header .carousel-item::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.9);
 }
 
 div > div > .btn {
@@ -10707,25 +10740,6 @@ div > div > .btn {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-}
-
-.btn1 {
-  background: #e4e4e4;
-  border: none;
-}
-
-.btn1:hover {
-  background-color: red;
-  color: white;
-}
-
-.btn2 {
-  background-color: red !important;
-}
-
-.btn2:hover {
-  background: #e4e4e4;
-  color: black;
 }
 
 .bascarou {
@@ -10887,11 +10901,16 @@ div > ul > .list-group-item:first-of-type {
 
 .section3 {
   background-image: url(../images/team_background.jpg);
-  padding-bottom: 70px;
+  padding-bottom: 20px;
   background-repeat: no repeat;
   background-position-y: 45%;
   background-position-x: 50%;
   background-size: 800%;
+}
+
+.numero {
+  font-weight: bold;
+  font-size: 23px;
 }
 
 .chef {
@@ -10991,15 +11010,15 @@ b {
 }
 
 .btns {
-  width: auto;
+  width: 15%;
   background-color: red;
-  border-radius: 20px;
+  border-radius: 30px;
 }
 
 .btnss {
   background-color: red;
-  width: auto;
-  border-radius: 20px;
+  width: 18%;
+  border-radius: 25px;
   margin-top: 20px;
 }
 
@@ -11048,7 +11067,7 @@ input {
   position: absolute;
   background-color: red;
   z-index: 999;
-  right: 8%;
+  right: 6%;
   top: 90%;
   padding: 7px 35px 7px 20px;
   border-radius: 10px;
@@ -11086,12 +11105,12 @@ input {
 }
 
 .textblog {
-  margin-left: 12%;
+  margin-left: 11%;
   margin-top: 2%;
 }
 
 .textblog1 {
-  margin-left: 1%;
+  margin-left: 2%;
   margin-top: 2%;
 }
 
@@ -11138,7 +11157,22 @@ input {
   background: rgba(0, 0, 0, 0.6);
 }
 
-.hautfooter {
+.contactme {
+  width: 40%;
+  margin-top: 4%;
+  background-color: #C53A40;
+  padding: 10px 10px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.footerfin {
+  background-image: url(../images/footer_background.jpg);
+  position: relative;
+  padding-top: 20px;
+}
+
+.footerfin .hautfooter {
   position: absolute;
   z-index: 999;
   height: 10px;
@@ -11148,28 +11182,14 @@ input {
   width: 100%;
 }
 
-.contactme {
-  width: 40%;
-  margin-top: 4%;
-  background-color: red;
-  padding: 10px 10px;
-  text-align: center;
-  border-radius: 10px;
-}
-
-.footer {
-  background-color: black;
-}
-
-/* Place the navbar at the bottom of the page, and make it stick */
-.nav-link {
-  margin: 0 auto;
-}
-
-.footerbas {
+.footerfin .footerbas {
   padding: 30px 0;
   margin-top: 80px;
   background-color: red;
+}
+
+.nav-link {
+  margin: 0 auto;
 }
 
 .contact {
@@ -11197,12 +11217,6 @@ input {
   border-radius: 20px;
   font-size: small;
   padding: 20px 40px 20px 40px;
-}
-
-.footerfin {
-  background-image: url(../images/footer_background.jpg);
-  position: relative;
-  padding-top: 20px;
 }
 
 .tags {
