--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -5,12 +5,10 @@ header{
 position: relative;
       .navss{
             position: absolute;
-            z-index: 999;
+            z-index: 200;
             width: 100%;
-         
       }
       .ul1{
-     
          max-height: max-content;
          max-width: max-content;
          margin-top: 4%;
@@ -19,7 +17,11 @@ position: relative;
          border-bottom: solid 1px white;
          border-top: solid 1px white; 
          li{
-            padding: 5px 15px;
+            padding: 10px 15px;
+            a{
+               text-transform: uppercase;
+               font-size: 12px;
+            }
          }
          }
          .logo{
@@ -36,80 +38,106 @@ position: relative;
             padding-left: 0;
             padding-right: 0 ;
             li{
-               padding: 5px 15px;
+               padding: 10px 15px ;
+               a{
+                  text-transform: uppercase;
+                  font-size: 12px;
+               }
             }
             
          }
+         .active{
+            background-color: red;
+         }
 
+         .navbar-nav>li>a{
+            color:white;
+            }
+            .navbar-nav>li:hover{
+            background-color: red;
+            
+            }
+}
 
-      }
-
-.active{
-   background-color: red;
-}
-.carousel-item{
-height:100%;
-}
-.carousel-caption{
-margin-bottom: 100px;
-}
-.carousel-indicators > li {
-border-radius: 50%;
-height: 10px;
-width: 10px;
-}
-.carousel-control-prev{
-opacity: 0;
-}
-.carousel-control-next{
-   opacity: 0;
-   }
-.navbar-nav>li>a{
-color:white;
-}
-.navbar-nav>li:hover{
-background-color: red;
-
-}
-.bold{
-font-size: larger;
-}
-.item{
-Position:relative;
-}
-.item::after {
-content:"";
-display:block;
-position:absolute;
-top:0;
-bottom:0;
-left:0;
-right:0;
-background:rgba(0,0,0,0.9);
-}
-.spancarou{
-font-size:130%;
-}
-.spancaroured{
-font-size:130%;
-color:red;
-}
 .text-head{
 position: absolute;
 z-index: 10;
 top: 25%;
 width: 60%;
-left: 20%;      
+left: 20%;
+         .textcarou{
+         color:white;
+         
+         font-family: 'Courgette', cursive;
+         font-size: 320%;
+         text-align: center;
+         opacity: 0.8;
+            .spancarou{
+            font-size:130%;
+            }
+            .spancaroured{
+            font-size:130%;
+            color:red;
+            }
+            
+         }  
+         .btn1{
+            background: rgb(228, 228, 228);
+            border: none;
+            }
+            .btn1:hover{
+            background-color: red;
+            color: white;
+            }
+            .btn2{
+            background-color: red !important;
+            }
+            .btn2:hover{
+            background: rgb(228, 228, 228);
+            color: black;
+            }    
 }  
-.textcarou{
-color:white;
-
-font-family: 'Courgette', cursive;
-font-size: 320%;
-text-align: center;
-opacity: 0.8;
-
+header{
+.carousel-item{
+   height:100%;
+   }
+   .carousel-caption{
+   margin-bottom: 100px;
+   }
+   .carousel-indicators > li {
+   border-radius: 50%;
+   height: 10px;
+   width: 10px;
+   }
+   .carousel-control-prev{
+   opacity: 0;
+   position: absolute;
+   z-index: 999;
+   }
+   .carousel-control-next{
+      opacity: 0;
+      position: absolute;
+      z-index: 100;
+      }
+   
+   .bold{
+   font-size: larger;
+   }
+   .carousel-item{
+   Position:relative;
+   }
+   .carousel-item::after {
+   content:"";
+   display:block;
+   position:absolute;
+   top:0;
+   bottom:0;
+   left:0;
+   right:0;
+   background:rgba(0,0,0,0.9);
+   }
 }
+
 div>div>.btn{ 
 border-radius: 25px;
 font-size: 80%;
@@ -119,21 +147,7 @@ padding-right: 20px;
 width: max-content;
 
 }
-.btn1{
-background: rgb(228, 228, 228);
-border: none;
-}
-.btn1:hover{
-background-color: red;
-color: white;
-}
-.btn2{
-background-color: red !important;
-}
-.btn2:hover{
-background: rgb(228, 228, 228);
-color: black;
-}
+
 .bascarou{
 position: absolute;
 z-index: 999;
@@ -281,11 +295,15 @@ position: absolute;
 }
 .section3{
 background-image:url(../images/team_background.jpg);
-padding-bottom: 70px;
+padding-bottom: 20px;
 background-repeat: no repeat;
 background-position-y: 45%;
 background-position-x: 50%;
 background-size: 800%;
+}
+.numero{
+   font-weight: bold;
+   font-size: 23px;
 }
 
 .chef{
@@ -381,15 +399,15 @@ b{
 color: white;
 }
 .btns{
-width: auto;
+width: 15%;
  background-color: red;
-border-radius: 20px;
+border-radius: 30px;
 
 }
 .btnss{
       background-color: red;
-      width: auto;
-      border-radius: 20px;
+      width: 18%;
+      border-radius: 25px;
       margin-top: 20px;
 }
 .bouton{
@@ -426,7 +444,7 @@ position: relative;
 position: absolute;
 background-color: red;
 z-index: 999;
-right: 8%;
+right: 6%;
 top:90%;
 padding: 7px 35px 7px 20px;
 border-radius: 10px;
@@ -463,11 +481,11 @@ color:red;
 
 }
 .textblog{
-margin-left: 12%;
+margin-left: 11%;
 margin-top: 2%;
 }
 .textblog1{   
-   margin-left: 1%;
+   margin-left: 2%;
    margin-top: 2%;
    }
 .titreblog{
@@ -507,41 +525,46 @@ padding-bottom: 50px;
    right:0;
    background:rgba(0,0,0,0.6);
    }
-.hautfooter{
-position: absolute;
-z-index: 999;
-height: 10px;
-background-image: url("../images/footer_bottom_decoration_img.png");
-background-repeat: repeat;
-top: 0;
-width: 100%;
-}
+
 
 .contactme{
 width: 40%;
 margin-top: 4%;
-background-color: red;
+background-color: #C53A40;
 
 padding: 10px 10px;
 text-align: center;
 border-radius: 10px;
 
 }
-.footer{
-background-color: black;
+
+.footerfin{
+   background-image: url(../images/footer_background.jpg);
+   position: relative;
+   padding-top: 20px;
+   .hautfooter{
+      position: absolute;
+      z-index: 999;
+      height: 10px;
+      background-image: url("../images/footer_bottom_decoration_img.png");
+      background-repeat: repeat;
+      top: 0;
+      width: 100%;
+      }
+      .footerbas{
+         padding: 30px 0;
+         margin-top: 80px;
+         background-color: red;
+         }
+         
+   
 }
 
-/* Place the navbar at the bottom of the page, and make it stick */
+
 
 .nav-link{
 margin:0 auto;
 
-}
-
-.footerbas{
-padding: 30px 0;
-margin-top: 80px;
-background-color: red;
 }
 
 .contact{
@@ -568,12 +591,7 @@ font-size: small;
 padding: 20px 40px 20px 40px;
 
 }
-.footerfin{
-background-image: url(../images/footer_background.jpg);
-position: relative;
-padding-top: 20px;
 
-}
 .tags{
 width: max-content;
 border: white 1px solid;
